# Maui

./: .gitignore  LICENSE  README.md
docker/maui_emulator/: Dockerfile  compose.yaml
docker/personal_ros2/: .env
docker/raspi_ros2/: .env  Dockerfile  compose.yaml  entrypoint.sh
raspiOs_setup/: manta_setup.sh  maui_setup.sh  useful_terminal.sh
raspiOs_setup/raspi_api_interface/: button_server.py  cameras_server_test.py  fast_cameras_server.py  hq_cameras_server.py  lgpiod_async_test.py
ros2_ws/src/: change_covariances.py
ros2_ws/src/gtu7_gps_comm/: package.xml  setup.cfg  setup.py
ros2_ws/src/gtu7_gps_comm/gtu7_gps_comm/: gps_gpsd_node.py  gps_node.py  gps_node_old.py  gps_test.py
ros2_ws/src/maui/: package.xml  setup.cfg  setup.py
ros2_ws/src/maui/config/: CirclePath.yaml  ControlTest.yaml  ControlTest2.yaml  MauiAttitudeCtrl.yaml  SpeedTest.yaml  TargetFollow.yaml  TestAttitudeCtrl.yaml  TestYawDepthCtrl.yaml  WakeUp.yaml
ros2_ws/src/maui/launch/: circle_path.launch.py  control_test.launch.py  maui_attitude_ctrl.launch.py  sleep.launch.py  speed_test.launch.py  target_follow.launch.py  test_attitude_ctrl.launch.py  test_circle_path.launch.py  test_yaw_deph_ctrl.launch.py  wake_up.launch.py
ros2_ws/src/maui/maui/: attitude_debug_node.py  attitude_test_node.py  comand_test_node.py  odom_test_node.py  odom_w_plot_node.py  vector3_test_node.py
ros2_ws/src/maui_brain/brain_stem/: CMakeLists.txt  package.xml
ros2_ws/src/maui_brain/brain_stem/config/: PNS.yaml
ros2_ws/src/maui_brain/brain_stem/launch/: peripheral_nervous_system.launch.py
ros2_ws/src/maui_brain/cerebellum/: CMakeLists.txt  package.xml
ros2_ws/src/maui_brain/cerebellum/config/: AttitudeController.yaml  AttitudeDampedController.yaml  BMF.yaml  CompactAttitudeController.yaml  DAS.yaml  Depth&AttitudeController.yaml  control_test.yaml
ros2_ws/src/maui_brain/cerebellum/include/cerebellum/: AttitudeController.hpp  PIDController.hpp
ros2_ws/src/maui_brain/cerebellum/launch/: attitude_controller.launch.py  attitude_damped_controller.launch.py  basic_motor_functions.launch.py  compact_attitude_controller.launch.py  control_test.launch.py  depth_and_attitude_controller.launch.py  depth_attitude_speed.launch.py
ros2_ws/src/maui_brain/cerebellum/src/: attitude_ctrl_node.cpp  ctrl_node.cpp  delayed_command_node.cpp  pid_node.cpp  q_ctrl_node.cpp  to_bmf_node.cpp  w_ctrl2_node.cpp  w_ctrl_node.cpp  ypr2q_node.cpp
ros2_ws/src/maui_brain/frontal_lobe/: package.xml  setup.cfg  setup.py
ros2_ws/src/maui_brain/frontal_lobe/config/: CirclePath.yaml  GPSFollow.yaml  SineDepth.yaml
ros2_ws/src/maui_brain/frontal_lobe/frontal_lobe/: gps_target_follower_node.py  sine_pub_node.py  yaw_integrator_node.py
ros2_ws/src/maui_brain/frontal_lobe/launch/: circle_path.launch.py  circle_path_test.launch.py  depth_sine.launch.py  gps_target_follow.launch.py
ros2_ws/src/maui_brain/occipital_lobe/: package.xml  setup.cfg  setup.py
ros2_ws/src/maui_brain/occipital_lobe/occipital_lobe/: camera_client_test.py  cameras_client_node.py
ros2_ws/src/maui_brain/parietal_lobe/: CMakeLists.txt  package.xml
ros2_ws/src/maui_brain/parietal_lobe/config/: Local_EKF.yaml  Proprioception.yaml  Thalamus.yaml  dual_ekf_navsat.yaml  ekf.yaml
ros2_ws/src/maui_brain/parietal_lobe/description/: materials.xacro  maui.urdf.xacro  maui_online.urdf.xacro
ros2_ws/src/maui_brain/parietal_lobe/description/meshes/: RaspiCamV3.stl  finL.stl  finR.stl
ros2_ws/src/maui_brain/parietal_lobe/launch/: dual_ekf.launch.py  ekf_global.launch.py  local_ekf.launch.py  proprioception.launch.py  thalamus.launch.py
ros2_ws/src/maui_brain/parietal_lobe/src/: gps_to_local.cpp  imu_bar_odom.cpp  imu_change_ref_node.cpp  joint_pose_node.cpp  local_to_gps.cpp
ros2_ws/src/maui_brain/temporal_lobe/: package.xml  setup.cfg  setup.py
ros2_ws/src/maui_brain/temporal_lobe/config/: ReflexMemoryFatique.yaml
ros2_ws/src/maui_brain/temporal_lobe/launch/: reflex_memory_fatique.launch.py
ros2_ws/src/maui_brain/temporal_lobe/temporal_lobe/: button_read_node.py  button_service_caller_node.py  button_timeout_node.py  button_timeout_node_old.py  depth_service_caller_node.py  depth_setter_node.py  param_dumper_node.py  record_service_node.py  titan_control.py
ros2_ws/src/mpu9250/: CMakeLists.txt  package.xml
ros2_ws/src/mpu9250/config/: calibration.yaml  mpu9250_params.yaml
ros2_ws/src/mpu9250/include/: MPU9250.h  MPU9250.hpp  MPU9250RegisterMap.h  Quaternion.hpp  QuaternionFilter.h  Wire.h  Wire.hpp
ros2_ws/src/mpu9250/launch/: mpu9250.launch.py
ros2_ws/src/mpu9250/src/: MPU9250.cpp  MPU9250_old.cpp  QuaternionFilter.cpp  Wire.cpp  mpu9250_node.cpp  mpu9250_node_gpt.cpp  mpu9250_node_old.cpp
ros2_ws/src/ms5837/: CMakeLists.txt  package.xml
ros2_ws/src/ms5837/include/: MS5837.h
ros2_ws/src/ms5837/src/: MS5837.cpp  depth_to_pose.cpp  ms5837_node.cpp  pose_node.cpp
ros2_ws/src/pwm_pca9685/: CMakeLists.txt  dheera-ros-pwm-pca9685- ROS package for PCA9685 16-channel PWM driver, used in motor and LED applications.url  package.xml
ros2_ws/src/pwm_pca9685/config/: .test.yaml.swp  Test.yaml
ros2_ws/src/pwm_pca9685/include/: smbus_functions.h
ros2_ws/src/pwm_pca9685/include/pwm_pca9685/: pca9685.hpp  pca9685_activity.h
ros2_ws/src/pwm_pca9685/launch/: test.launch.py
ros2_ws/src/pwm_pca9685/src/: ctrl_node.cpp  pca9685_activity.cpp  pca9685_node.cpp  pwm_wave_node.cpp
